# phatsort-haskell

./: CHANGELOG.md  LibOA.hs  Makefile  README.md  cabal-8.10.7.project  cabal-8.2.2.project  cabal-9.2.1.project  cabal-9.4.4.project  cabal-bounds-lower.project  cabal-bounds-upper.project  cabal.project  default.nix  nix.md  phatsort.cabal  phatsort.hs  phatsort.nix  shell.nix  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.2.1.yaml  stack-9.2.2.yaml  stack-9.2.8.yaml  stack-9.4.2.yaml  stack-9.4.4.yaml  stack-9.4.8.yaml  stack-9.6.2.yaml  stack-9.6.3.yaml  stack-9.6.4.yaml  stack-9.6.5.yaml  stack-9.6.6.yaml  stack-9.8.1.yaml  stack-9.8.2.yaml  stack-bounds.yaml  stack.yaml  test-all.nix
.github/workflows/: ci.yml
app/: LibOA.hs  Options.hs  phatsort.hs  seqcp.hs
doc/: phatsort.1  phatsort.1.md  seqcp.1  seqcp.1.md
pkg/deb/: Makefile  control  copyright
pkg/rpm/: phatsort-haskell.spec
project/: TODO.md
project/log/: 20191221-design.md
project/release/: phatsort-haskell-0.1.0.0.md  phatsort-haskell-0.1.0.1.md  phatsort-haskell-0.1.0.2.md  phatsort-haskell-0.1.0.3.md  phatsort-haskell-0.2.0.0.md  phatsort-haskell-0.2.0.1.md  phatsort-haskell-0.2.0.2.md  phatsort-haskell-0.3.0.0.md  phatsort-haskell-0.4.0.0.md  phatsort-haskell-0.5.0.0.md  phatsort-haskell-0.5.0.1.md  phatsort-haskell-0.6.0.0.md
src/: PhatSort.hs
src/PhatSort/: Script.hs  SortOptions.hs
src/PhatSort/Cmd/: PhatSort.hs  SeqCp.hs
src/PhatSort/Monad/: FileSystem.hs  Process.hs  Stdio.hs  Sync.hs
src/PhatSort/Monad/Sync/: Unistd.hs
src/PhatSort/Monad/Trans/: Error.hs
test/: Spec.hs  TestLib.hs
test/PhatSort/Cmd/PhatSort/: HMock.hs  Mock.hs
test/PhatSort/Cmd/SeqCp/: HMock.hs  Mock.hs
