name:           phatsort
version:        0.4.0.0
category:       Utils
synopsis:       FAT filesystem sort utility
description:
  This package provides a utility for sorting files and directories on a FAT
  filesystem.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/phatsort-haskell#readme>.

homepage:       https://github.com/ExtremaIS/phatsort-haskell#readme
bug-reports:    https://github.com/ExtremaIS/phatsort-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2019-2021 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  >=1.10
build-type:     Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.6
   || ==9.0.1

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/phatsort-haskell.git

flag write-hie
  description: write .hie files
  default: False

executable phatsort
  main-is: phatsort.hs
  other-modules:
      LibOA
    , Paths_phatsort
  build-depends:
      ansi-wl-pprint >=0.6 && <0.7
    , base >=4.7 && <5
    , directory >=1.3 && <1.4
    , filepath >=1.4 && <1.5
    , optparse-applicative >=0.14 && <0.17
    , process >=1.6.1 && <1.7
    , random-shuffle >=0.0.4 && <0.1
    , transformers >=0.5 && <0.6
  default-language: Haskell2010
  if flag(write-hie)
    ghc-options: -Wall -fwrite-ide-info -hiedir=.hie
  else
    ghc-options: -Wall

test-suite phatsort-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
  default-language: Haskell2010
  ghc-options: -Wall
